# HeyMask

./: .gitignore  CMakeLists.txt  README.md  heymask.ini
HeyMask/: Color.hpp  Detector.cpp  Detector.hpp  Logger.cpp  Logger.hpp  Sender.cpp  Sender.hpp  SharedQueue.h  Sound.cpp  Sound.hpp  main.cpp
